# MeloCodec

./: .gitattributes  README.md  pyproject.toml
docs/: index.html  scripts.js  styles.css
examples/: minimal_forward.py
melocodec/: __init__.py  bwc.py  chroma.py  layers.py  quantize.py
tests/: test_architecture.py
