[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melocodec"
version = "0.1.0"
description = "Core MeloCodec/BWC architecture for singing voice neural audio coding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]

[tool.setuptools.packages.find]
include = ["melocodec*"]
